[gd_scene load_steps=2 format=3 uid="uid://w6g7bukyb5nn"]

[ext_resource type="Script" path="res://objects/lobby.gd" id="1_qke4l"]

[node name="lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qke4l")

[node name="background" type="Panel" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 53.0
offset_right = 490.0
offset_bottom = 380.0

[node name="player_name_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 28.0
offset_top = 18.0
offset_right = 140.0
offset_bottom = 46.0
theme_override_font_sizes/font_size = 20
text = "Your name:"

[node name="player_name_line_edit" type="LineEdit" parent="background"]
layout_mode = 0
offset_left = 52.0
offset_top = 52.0
offset_right = 209.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 20
text = "test_user"

[node name="host_button" type="Button" parent="background"]
layout_mode = 0
offset_left = 239.0
offset_top = 24.0
offset_right = 354.0
offset_bottom = 79.0
text = "Host Game"

[node name="ip_label" type="Label" parent="background"]
layout_mode = 0
offset_left = 24.0
offset_top = 128.0
offset_right = 136.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 20
text = "IP:"

[node name="ip_line_edit" type="LineEdit" parent="background"]
layout_mode = 0
offset_left = 48.0
offset_top = 162.0
offset_right = 205.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 20
text = "127.0.0.1"

[node name="join_button" type="Button" parent="background"]
layout_mode = 0
offset_left = 235.0
offset_top = 134.0
offset_right = 350.0
offset_bottom = 189.0
text = "Join Game"

[node name="player_list" type="ItemList" parent="background"]
layout_mode = 0
offset_left = 51.0
offset_top = 219.0
offset_right = 205.0
offset_bottom = 311.0

[node name="start_button" type="Button" parent="background"]
layout_mode = 0
offset_left = 225.0
offset_top = 225.0
offset_right = 344.0
offset_bottom = 270.0
text = "Start Game"

[connection signal="pressed" from="background/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="background/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="background/start_button" to="." method="_on_start_button_pressed"]
